# fetch2gmail

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: PUBLISHING.md
src/fetcher/: auth_server.py  cli.py  config.py  gmail_client.py  imap_client.py  run.py  ui_auth.py  web_ui.py
systemd/: README.md  fetch2gmail-ui.service
